# phlex

./: .clang-tidy
.github/workflows/: markdown-check.yaml
docs/dev/: clang-tidy-fixes-2026-04.md
form/: CMakeLists.txt  form_module.cpp  form_source.cpp
form/form/: CMakeLists.txt  form_reader.cpp  form_reader.hpp  form_source_type_registry.cpp  form_source_type_registry.hpp  form_writer.cpp  form_writer.hpp
form/persistence/: ipersistence_reader.hpp  ipersistence_writer.hpp  persistence_reader.cpp  persistence_reader.hpp  persistence_writer.cpp  persistence_writer.hpp
form/root_storage/: demangle_name.cpp  root_rfield_read_container.cpp  root_rfield_read_container.hpp  root_rfield_write_container.cpp  root_rfield_write_container.hpp  root_tbranch_read_container.cpp  root_tbranch_read_container.hpp  root_tbranch_write_container.cpp  root_tbranch_write_container.hpp  root_tfile.cpp  root_tfile.hpp  root_ttree_write_container.cpp  root_ttree_write_container.hpp
form/storage/: CMakeLists.txt  istorage.hpp  storage_associative_write_container.hpp  storage_file.hpp  storage_read_container.cpp  storage_read_container.hpp  storage_reader.cpp  storage_reader.hpp  storage_write_association.hpp  storage_write_container.cpp  storage_write_container.hpp  storage_writer.cpp  storage_writer.hpp
phlex/core/: declared_fold.hpp  declared_observer.hpp  declared_predicate.hpp  declared_transform.hpp  declared_unfold.hpp  filter.cpp  glue.hpp  graph_proxy.hpp  index_router.hpp  make_computational_edges.cpp  multilayer_join_node.hpp  product_query.hpp  provider_node.cpp  registration_api.hpp
phlex/core/detail/: filter_impl.cpp  filter_impl.hpp  repeater_node.hpp
phlex/model/: data_cell_index.cpp  fixed_hierarchy.hpp  handle.hpp  product_store.cpp  product_store.hpp
phlex/utilities/: thread_counter.hpp
plugins/: layer_generator.cpp
plugins/python/: CMakeLists.txt
plugins/python/python/phlex/: _typing.py
plugins/python/src/: configwrap.cpp  dyncall.cpp  dyncall.hpp  modulewrap.cpp
test/: filter.cpp  product_handle.cpp  provider_test.cpp  type_distinction.cpp
test/form/: CMakeLists.txt  form_basics_test.cpp  form_gaussian_read_test.jsonnet  form_gaussian_write_test.jsonnet  form_read_sum_by_2.jsonnet  form_source_extra_types.cpp  form_storage_test.cpp  form_test_with_output.jsonnet  generate_layers_filtered.cpp  generate_vector.cpp  reader.cpp  sum_by_2_transform.cpp  writer.cpp
test/python/: CMakeLists.txt  adder.py  jited.py  pyjited.jsonnet
